--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="shortcut icon"
-      href="https://res.cloudinary.com/maxjhernandez/image/upload/v1662496118/Las%20Mar%C3%ADas/icon_n1hwdv.jpg"
+      href="https://res.cloudinary.com/maxjhernandez/image/upload/v1662509205/Las%20Mar%C3%ADas/logo2_agtvxh.jpg"
     />
   </head>
   <body>
@@ -31,7 +31,7 @@
           <a class="navbar-brand" href="./index.html">
             <img
               class="logo-img"
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662496084/Las%20Mar%C3%ADas/MLA_Logo_nk3jkc.jpg"
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662509205/Las%20Mar%C3%ADas/logo2_agtvxh.jpg"
               alt="Logo"
             />
           </a>
@@ -161,99 +161,147 @@
       <h2 class="propiedades-destacadas-title">Propiedades Destacadas</h2>
       <section class="propiedades-destacadas">
         <!-- Destacada 1 -->
-        <div class="card" style="width: 18rem">
-          <img
-            src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431949/Las%20Mar%C3%ADas/Departamento_en_las_Condes_5_Venta_hxge6q.png"
-            class="card-img-top"
-            alt="Vista desde departamento"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
+        <div class="card">
+          <div class="img-container">
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
+              class="card-img-top"
+              alt="Lobby moderno piso negro"
+            />
+            <p>UF 5.858,78</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <h5 class="card-title">Departamento en Las Condes</h5>
+            <a class="card-text">
+              Excelente departamento en Venta en Las Condes. Living comedor con
+              salida a terraza con excelente vista...
+            </a>
+          </div>
+          <div class="card-icon">
+            <div class="card-body card-utilities">
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
+                alt="bedroom icon"
+                class="icon"
+              />
+              <p>2</p>
+            </div>
+            <div class="card-body card-utilities">
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
+                alt="bathroom icon"
+                class="icon"
+              />
+              <p>2</p>
+            </div>
           </div>
         </div>
         <!-- Destacada 2 -->
-        <div class="card" style="width: 18rem">
-          <img
-            src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Vitacura_Venta_mvgzo7.png"
-            class="card-img-top"
-            alt="jardín trasero"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
+        <div class="card">
+          <div class="img-container">
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
+              class="card-img-top"
+              alt="Lobby moderno piso negro"
+            />
+            <p>UF 5.858,78</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <h5 class="card-title">Departamento en Las Condes</h5>
+            <a class="card-text">
+              Excelente departamento en Venta en Las Condes. Living comedor con
+              salida a terraza con excelente vista...
+            </a>
+          </div>
+          <div class="card-icon">
+            <div class="card-body card-utilities">
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
+                alt="bedroom icon"
+                class="icon"
+              />
+              <p>2</p>
+            </div>
+            <div class="card-body card-utilities">
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
+                alt="bathroom icon"
+                class="icon"
+              />
+              <p>2</p>
+            </div>
           </div>
         </div>
         <!-- Destacada 3 -->
-        <div class="card" style="width: 18rem">
-          <img
-            src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
-            class="card-img-top"
-            alt="Lobby moderno piso negro"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
+        <div class="card">
+          <div class="img-container">
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
+              class="card-img-top"
+              alt="Lobby moderno piso negro"
+            />
+            <p>UF 5.858,78</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <h5 class="card-title">Departamento en Las Condes</h5>
+            <a class="card-text">
+              Excelente departamento en Venta en Las Condes. Living comedor con
+              salida a terraza con excelente vista...
+            </a>
+          </div>
+          <div class="card-icon">
+            <div class="card-body card-utilities">
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
+                alt="bedroom icon"
+                class="icon"
+              />
+              <p>2</p>
+            </div>
+            <div class="card-body card-utilities">
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
+                alt="bathroom icon"
+                class="icon"
+              />
+              <p>2</p>
+            </div>
           </div>
         </div>
         <!-- Destacada 4 -->
-        <div class="card" style="width: 18rem">
-          <img
-            src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_Arriendo_tyt2wa.png"
-            class="card-img-top"
-            alt="Living de madera"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
+        <div class="card">
+          <div class="img-container">
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
+              class="card-img-top"
+              alt="Lobby moderno piso negro"
+            />
+            <p>UF 5.858,78</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <h5 class="card-title">Departamento en Las Condes</h5>
+            <a class="card-text">
+              Excelente departamento en Venta en Las Condes. Living comedor con
+              salida a terraza con excelente vista...
+            </a>
+          </div>
+          <div class="card-icon">
+            <div class="card-body card-utilities">
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
+                alt="bedroom icon"
+                class="icon"
+              />
+              <p>2</p>
+            </div>
+            <div class="card-body card-utilities">
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
+                alt="bathroom icon"
+                class="icon"
+              />
+              <p>2</p>
+            </div>
           </div>
         </div>
       </section>
