index contacto quienes pasado a scss

--- a/index.html
+++ b/index.html
@@ -357,9 +357,14 @@
           </a>
         </div>
       </div>
-      <h4 class="copyright">
-        Copyright &copy; 2022. Todos los derechos reservados.
-      </h4>
+      <div class="servicios-footer">
+        <h4>Nuestros servicios</h4>
+        <ul>
+          <li><a href="./pages/quienes.html">Quienes somos</a></li>
+          <li><a href="./pages/venta.html">Venta</a></li>
+          <li><a href="./pages/arriendo.html">Arriendo</a></li>
+        </ul>
+      </div>
     </footer>
 
     <script
