--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -59,7 +59,9 @@
       </nav>
     </header>
     <main class="quienes-main">
-      <h1 class="quienes-title">Quiénes somos</h1>
+      <div class="quienes-title">
+      <h1>Quiénes somos</h1>
+      </div>
       <div class="quienes-container">
         <section class="quienes-somos-section">
           <p>
@@ -147,37 +149,62 @@
     <footer class="footer">
       <div class="contacto">
         <h4>Contáctenos</h4>
-        <p>+56 9 9488 3602</p>
-        <p>lopezastrada@mlaprop.com</p>
-        <p>Los Militares 4665, dpto. 112, Las Condes</p>
+        <ul>
+          <li>
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554274/Las%20Mar%C3%ADas/pin_z68cm8.png"
+              alt="Location icon"
+            />
+            <p>Los Militares 4665, dpto. 112, Las Condes</p>
+          </li>
+          <li>
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554739/Las%20Mar%C3%ADas/whatsapp_ae6nt8.png"
+              alt="whatsapp icon"
+            />
+            <p>+56 9 9488 3602</p>
+          </li>
+          <li>
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554881/Las%20Mar%C3%ADas/email_j5g44t.png"
+              alt="email icon"
+            />
+            <p>lopezastrada@mlaprop.com</p>
+          </li>
+        </ul>
       </div>
       <div class="redes-cont">
-        <img
-          src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431076/Las%20Mar%C3%ADas/facebook_qqy0y4.png"
-          alt="facebook"
-          class="redes"
-        />
-        <a href="mailto:pelulopezastrada@gmail.com" target="_blank">
+        <h4>Síguenos</h4>
+        <div class="">
           <img
-            src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431076/Las%20Mar%C3%ADas/gmail_vld7jf.png"
-            alt="gmail"
+            src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431076/Las%20Mar%C3%ADas/facebook_qqy0y4.png"
+            alt="facebook"
             class="redes"
           />
-        </a>
-        <a
-          href="https://api.whatsapp.com/send?phone=56994883602"
-          target="_blank"
-        >
-          <img
-            src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431076/Las%20Mar%C3%ADas/whatsapp_gpuqsz.png"
-            alt="whatsapp"
-            class="redes"
-          />
-        </a>
+          <a href="mailto:pelulopezastrada@gmail.com" target="_blank">
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662556736/Las%20Mar%C3%ADas/instagram_phf6gi.png"
+              alt="instagram"
+              class="redes"
+            />
+          </a>
+          <a href="#" target="_blank">
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662556674/Las%20Mar%C3%ADas/twitter_gxunzf.png"
+              alt="twitter"
+              class="redes"
+            />
+          </a>
+        </div>
       </div>
-      <h4 class="copyright">
-        Copyright &copy; 2022. Todos los derechos reservados.
-      </h4>
+      <div class="servicios-footer">
+        <h4>Nuestros servicios</h4>
+        <ul>
+          <li><a href="./quienes.html">Quienes somos</a></li>
+          <li><a href="./venta.html">Venta</a></li>
+          <li><a href="./arriendo.html">Arriendo</a></li>
+        </ul>
+      </div>
     </footer>
 
     <script
