casi para entregar

--- a/pages/arriendo.html
+++ b/pages/arriendo.html
@@ -31,7 +31,7 @@
           <a class="navbar-brand" href="../index.html">
             <img
               class="logo-img"
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662496084/Las%20Mar%C3%ADas/MLA_Logo_nk3jkc.jpg"
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662509205/Las%20Mar%C3%ADas/logo2_agtvxh.jpg"
               alt="Logo"
             />
           </a>
@@ -83,11 +83,11 @@
       <section class="venta-arr-main">
         <section class="casas-container">
           <!-- Casa 1 -->
-          <div class="card mb-3">
+          <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
-                  src="../img/casa-1.jpg"
+                  src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_3_Venta_mryhqc.png"
                   class="img-fluid rounded-start"
                   alt="casa-1"
                 />
@@ -108,11 +108,11 @@
             </div>
           </div>
           <!-- Casa 2 -->
-          <div class="card mb-3">
+          <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
-                  src="../img/casa-2.jpg"
+                  src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_3_Venta_mryhqc.png"
                   class="img-fluid rounded-start"
                   alt="..."
                 />
@@ -133,11 +133,11 @@
             </div>
           </div>
           <!-- Casa 3 -->
-          <div class="card mb-3">
+          <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
-                  src="../img/casa-3.jpg"
+                  src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_3_Venta_mryhqc.png"
                   class="img-fluid rounded-start"
                   alt="casa-1"
                 />
@@ -160,48 +160,48 @@
         </section>
         <section class="form-container-todos">
           <h3>Busqueda</h3>
-          <select class="form-select" aria-label="Default select example">
-            <option selected>Venta</option>
-            <option value="1">Arriendo</option>
-          </select>
-          <select class="form-select" aria-label="Default select example">
-            <option selected>Casa</option>
-            <option value="1">Departamento</option>
-            <option value="2">Oficina</option>
-            <option value="3">Local</option>
-          </select>
-          <select class="form-select" aria-label="Default select example">
-            <option selected>Región Metropolitana</option>
-            <option value="1">V Región</option>
-          </select>
-          <select class="form-select" aria-label="Default select example">
-            <option selected>Colina</option>
-            <option value="1">Estación Central</option>
-            <option value="2">Huechuraba</option>
-            <option value="3">Independecia</option>
-            <option value="4">La Reina</option>
-            <option value="5">Las Condes</option>
-            <option value="6">Lo Barnechea</option>
-            <option value="7">Ñuñoa</option>
-            <option value="8">Providencia</option>
-            <option value="9">San Miguel</option>
-            <option value="10">Santiago</option>
-            <option value="11">Vitacura</option>
-          </select>
-          <select
-            class="form-select form-price"
-            aria-label="Default select example"
-          >
-            <option selected>USD</option>
-            <option value="1">U.F.</option>
-          </select>
-          <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-primary button-search" type="button">
-              Buscar
-            </button>
-          </div>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Venta</option>
+              <option value="1">Arriendo</option>
+            </select>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Casa</option>
+              <option value="1">Departamento</option>
+              <option value="2">Oficina</option>
+              <option value="3">Local</option>
+            </select>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Región Metropolitana</option>
+              <option value="1">V Región</option>
+            </select>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Colina</option>
+              <option value="1">Estación Central</option>
+              <option value="2">Huechuraba</option>
+              <option value="3">Independecia</option>
+              <option value="4">La Reina</option>
+              <option value="5">Las Condes</option>
+              <option value="6">Lo Barnechea</option>
+              <option value="7">Ñuñoa</option>
+              <option value="8">Providencia</option>
+              <option value="9">San Miguel</option>
+              <option value="10">Santiago</option>
+              <option value="11">Vitacura</option>
+            </select>
+            <select
+              class="form-select form-price"
+              aria-label="Default select example"
+            >
+              <option selected>USD</option>
+              <option value="1">U.F.</option>
+            </select>
+            <div class="d-grid gap-2 col-6 mx-auto">
+              <button class="btn btn-primary button-search" type="button">
+                Buscar
+              </button>
+            </div>
         </section>
-      </section>
+
     </main>
     <footer class="footer">
       <div class="contacto">
