--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,7 @@
           <a class="navbar-brand" href="../index.html">
             <img
               class="logo-img"
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662496084/Las%20Mar%C3%ADas/MLA_Logo_nk3jkc.jpg"
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662509205/Las%20Mar%C3%ADas/logo2_agtvxh.jpg"
               alt="Logo"
             />
           </a>
