--- a/pages/venta.html
+++ b/pages/venta.html
@@ -31,7 +31,7 @@
           <a class="navbar-brand" href="../index.html">
             <img
               class="logo-img"
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662496084/Las%20Mar%C3%ADas/MLA_Logo_nk3jkc.jpg"
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662509205/Las%20Mar%C3%ADas/logo2_agtvxh.jpg"
               alt="Logo"
             />
           </a>
@@ -83,7 +83,7 @@
       <section class="venta-arr-main">
         <section class="casas-container">
           <!-- Casa 1 -->
-          <div class="card mb-3">
+          <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
@@ -108,7 +108,7 @@
             </div>
           </div>
           <!-- Casa 2 -->
-          <div class="card mb-3">
+          <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
@@ -133,7 +133,7 @@
             </div>
           </div>
           <!-- Casa 3 -->
-          <div class="card mb-3">
+          <div class="card">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
