--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -26,7 +26,9 @@
       <nav class="navbar navbar-expand-lg nav-color">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img class="logo-img" src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662496084/Las%20Mar%C3%ADas/MLA_Logo_nk3jkc.jpg" alt="Logo" />
+            <img class="logo-img" 
+            src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662509205/Las%20Mar%C3%ADas/logo2_agtvxh.jpg" 
+            alt="Logo" />
           </a>
           <button
             class="navbar-toggler"
