tercera entrega final

--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -153,24 +153,36 @@
         <h4>Contáctenos</h4>
         <ul>
           <li>
-            <img
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554274/Las%20Mar%C3%ADas/pin_z68cm8.png"
-              alt="Location icon"
-            />
+            <a
+              href="https://www.google.com.ar/maps/place/Los+Militares+4665,+Las+Condes,+7560968,+Regi%C3%B3n+Metropolitana,+Chile/@-33.4120432,-70.5830165,17z/data=!3m1!4b1!4m5!3m4!1s0x9662cf2210bb9a5d:0x7a75282c2c54c5a1!8m2!3d-33.4120477!4d-70.5808278"
+              target="_blank"
+            >
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554274/Las%20Mar%C3%ADas/pin_z68cm8.png"
+                alt="Location icon"
+              />
+            </a>
             <p>Los Militares 4665, dpto. 112, Las Condes</p>
           </li>
           <li>
-            <img
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554739/Las%20Mar%C3%ADas/whatsapp_ae6nt8.png"
-              alt="whatsapp icon"
-            />
+            <a
+              href="https://api.whatsapp.com/send?phone=56994883602"
+              target="_blank"
+            >
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554739/Las%20Mar%C3%ADas/whatsapp_ae6nt8.png"
+                alt="whatsapp icon"
+              />
+            </a>
             <p>+56 9 9488 3602</p>
           </li>
           <li>
-            <img
-              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554881/Las%20Mar%C3%ADas/email_j5g44t.png"
-              alt="email icon"
-            />
+            <a href="mailto:pelulopezastrada@gmail.com" target="_blank">
+              <img
+                src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554881/Las%20Mar%C3%ADas/email_j5g44t.png"
+                alt="email icon"
+              />
+            </a>
             <p>lopezastrada@mlaprop.com</p>
           </li>
         </ul>
@@ -178,12 +190,14 @@
       <div class="redes-cont">
         <h4>Síguenos</h4>
         <div class="">
-          <img
-            src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431076/Las%20Mar%C3%ADas/facebook_qqy0y4.png"
-            alt="facebook"
-            class="redes"
-          />
-          <a href="mailto:pelulopezastrada@gmail.com" target="_blank">
+          <a href="#" target="_blank">
+            <img
+              src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431076/Las%20Mar%C3%ADas/facebook_qqy0y4.png"
+              alt="facebook"
+              class="redes"
+            />
+          </a>
+          <a href="#" target="_blank">
             <img
               src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662556736/Las%20Mar%C3%ADas/instagram_phf6gi.png"
               alt="instagram"
@@ -202,9 +216,9 @@
       <div class="servicios-footer">
         <h4>Nuestros servicios</h4>
         <ul>
-          <li><a href="./quienes.html">Quienes somos</a></li>
-          <li><a href="./venta.html">Venta</a></li>
-          <li><a href="./arriendo.html">Arriendo</a></li>
+          <li><a href="./pages/quienes.html">Quienes somos</a></li>
+          <li><a href="./pages/venta.html">Venta</a></li>
+          <li><a href="./pages/arriendo.html">Arriendo</a></li>
         </ul>
       </div>
     </footer>
