--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -19,7 +19,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="shortcut icon" href="https://res.cloudinary.com/maxjhernandez/image/upload/v1662496118/Las%20Mar%C3%ADas/icon_n1hwdv.jpg" />
+    <link
+      rel="shortcut icon"
+      href="https://res.cloudinary.com/maxjhernandez/image/upload/v1662509205/Las%20Mar%C3%ADas/logo2_agtvxh.jpg"
+    />
   </head>
   <body>
     <header>
