--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -193,9 +193,9 @@
       <div class="servicios-footer">
         <h4>Nuestros servicios</h4>
         <ul>
-          <li><a href="./pages/quienes.html">Quienes somos</a></li>
-          <li><a href="./pages/venta.html">Venta</a></li>
-          <li><a href="./pages/arriendo.html">Arriendo</a></li>
+          <li><a href="./quienes.html">Quienes somos</a></li>
+          <li><a href="./venta.html">Venta</a></li>
+          <li><a href="./arriendo.html">Arriendo</a></li>
         </ul>
       </div>
     </footer>
