--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -70,17 +70,9 @@
       <div class="quienes-container">
         <section class="quienes-somos-section">
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Dignissimos officia atque error quia non dicta explicabo assumenda
-            quis! Accusamus provident cumque velit pariatur temporibus, ab ipsam
-            ducimus debitis perspiciatis animi? Est aut maiores laboriosam iure,
-            itaque non reiciendis repellendus distinctio labore temporibus animi
-            blanditiis hic sapiente consequatur, eius dolores dolore molestiae!
-            Voluptatem id error mollitia neque necessitatibus fugiat molestiae
-            assumenda est vero ad reiciendis, sint dolorum fugit harum dolor
-            nisi quod odio illo, corporis cumque ullam quisquam nesciunt non.
-            Veniam eligendi delectus qui eaque quas quia libero architecto aut
-            illum?
+            Las Marías se fundó durante 2018 en Santiago de Chile. Somos una empresa familiar y por eso entendemos que un hogar es fundamental para que puedas crear la tuya. <br>
+            Nuestro propósito es ayudarte a encontrar ese hogar con el que tanto deseas!
+            No solo somos una corredora de propiedades, somos cumplidores de sueños.
           </p>
           <img src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431856/Las%20Mar%C3%ADas/quienes-somos_zywbez.jpg" alt="Mansión blanca techo azul y jardín" />
           <p>
@@ -219,9 +211,9 @@
       <div class="servicios-footer">
         <h4>Nuestros servicios</h4>
         <ul>
-          <li><a href="./pages/quienes.html">Quienes somos</a></li>
-          <li><a href="./pages/venta.html">Venta</a></li>
-          <li><a href="./pages/arriendo.html">Arriendo</a></li>
+          <li><a href="./quienes.html">Quienes somos</a></li>
+          <li><a href="./venta.html">Venta</a></li>
+          <li><a href="./arriendo.html">Arriendo</a></li>
         </ul>
       </div>
     </footer>
