--- a/pages/venta.html
+++ b/pages/venta.html
@@ -94,11 +94,13 @@
               </div>
               <div class="col-md-6">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Departamento en Las Condes</h5>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                    Living comedor con salida a terraza con excelente vista. 2
+                    dormitorios, el dormitorio principal en suite con salida a
+                    su terraza. El segundo dormitorio con muy linda vista
+                    también con un segundo baño. Cocina independiente con loggia
+                    y conexión a lavadora. 58 metros útiles.
                   </p>
                   <p class="card-text">
                     <small class="text-muted">Last updated 3 mins ago</small>
@@ -271,9 +273,9 @@
       <div class="servicios-footer">
         <h4>Nuestros servicios</h4>
         <ul>
-          <li><a href="./pages/quienes.html">Quienes somos</a></li>
-          <li><a href="./pages/venta.html">Venta</a></li>
-          <li><a href="./pages/arriendo.html">Arriendo</a></li>
+          <li><a href="./quienes.html">Quienes somos</a></li>
+          <li><a href="./venta.html">Venta</a></li>
+          <li><a href="./arriendo.html">Arriendo</a></li>
         </ul>
       </div>
     </footer>
