--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,52 +66,34 @@
       </nav>
     </header>
     <main class="contacto-main">
-      <div class="contacto-title">
-        <h1>Contacto</h1>
-      </div>
-      <section class="contacto-info">
-        <div class="contacto-data">
-          <h3>Dirección</h3>
-          <p>Las Marías Propiedades</p>
-          <p>Los Militares 4665, depto 112, Las Condes</p>
-          <p>+56 9 9488 3602</p>
-        </div>
-        <div class="iframe-container">
-          <h3>Donde estamos</h3>
-          <div class="ratio ratio-16x9">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.429402372089!2d-70.58301648448392!3d-33.41204768078487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf2210bb9a5d%3A0x7a75282c2c54c5a1!2sLos%20Militares%204665%2C%20Las%20Condes%2C%207560968%2C%20Regi%C3%B3n%20Metropolitana%2C%20Chile!5e0!3m2!1ses!2sar!4v1658694683900!5m2!1ses!2sar"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
-        </div>
-      </section>
       <section class="envie-consulta">
         <div class="title-consulta">
           <h4>Envíenos su mensaje</h4>
         </div>
         <form action="#" method="get" class="form-consulta">
-          <div class="input-group">
-            <input
-              type="text"
-              aria-label="First name"
-              class="form-control"
-              placeholder="Nombre y apellido"
-            />
-          </div>
-          <div class="input-group flex-nowrap">
-            <input
-              type="email"
-              class="form-control"
-              placeholder="Correo electrónico"
-              aria-label="Username"
-              aria-describedby="addon-wrapping"
-            />
+          <div class="preguntas">
+            <div class="input-group">
+              <input
+                type="text"
+                aria-label="First name"
+                class="form-control"
+                placeholder="Nombre y apellido"
+              />
+            </div>
+            <div class="input-group">
+              <input
+                type="email"
+                class="form-control"
+                placeholder="Correo electrónico"
+                aria-label="Username"
+                aria-describedby="addon-wrapping"
+              />
+            </div>
+            <div class="input-group">
+              <select class="form-select" aria-label="Default select example">
+                <option selected>Venta</option>
+                <option value="1">Arriendo</option>
+              </select>
           </div>
           <p>¿Cual es tu consulta?</p>
           <div class="form-floating">
@@ -138,8 +120,8 @@
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554274/Las%20Mar%C3%ADas/pin_z68cm8.png"
                 alt="Location icon"
               />
+              <p>Los Militares 4665, dpto. 112, Las Condes</p>
             </a>
-            <p>Los Militares 4665, dpto. 112, Las Condes</p>
           </li>
           <li>
             <a
@@ -150,8 +132,8 @@
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554739/Las%20Mar%C3%ADas/whatsapp_ae6nt8.png"
                 alt="whatsapp icon"
               />
+              <p>+56 9 9488 3602</p>
             </a>
-            <p>+56 9 9488 3602</p>
           </li>
           <li>
             <a href="mailto:pelulopezastrada@gmail.com" target="_blank">
@@ -159,8 +141,8 @@
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662554881/Las%20Mar%C3%ADas/email_j5g44t.png"
                 alt="email icon"
               />
+              <p>lopezastrada@mlaprop.com</p>
             </a>
-            <p>lopezastrada@mlaprop.com</p>
           </li>
         </ul>
       </div>
