avances del miercoles

--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -97,7 +97,7 @@
           </p>
         </section>
         <section class="form-container-todos">
-          <h3>Busqueda</h3>
+          <h3>Búsqueda</h3>
           <select class="form-select" aria-label="Default select example">
             <option selected>Venta</option>
             <option value="1">Arriendo</option>
@@ -126,8 +126,15 @@
             <option value="10">Santiago</option>
             <option value="11">Vitacura</option>
           </select>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>1 ambiente</option>
+            <option value="1">2 ambientes</option>
+            <option value="1">3 ambientes</option>
+            <option value="1">4 ambientes</option>
+            <option value="1">5 ambientes</option>
+          </select>
           <select
-            class="form-select form-price"
+            class="form-select"
             aria-label="Default select example"
           >
             <option selected>USD</option>
