--- a/pages/venta.html
+++ b/pages/venta.html
@@ -161,7 +161,7 @@
           </div>
         </section>
         <section class="form-container-todos">
-          <h3>Busqueda</h3>
+          <h3>Búsqueda</h3>
           <select class="form-select" aria-label="Default select example">
             <option selected>Venta</option>
             <option value="1">Arriendo</option>
@@ -190,10 +190,14 @@
             <option value="10">Santiago</option>
             <option value="11">Vitacura</option>
           </select>
-          <select
-            class="form-select form-price"
-            aria-label="Default select example"
-          >
+          <select class="form-select" aria-label="Default select example">
+            <option selected>1 ambiente</option>
+            <option value="1">2 ambientes</option>
+            <option value="1">3 ambientes</option>
+            <option value="1">4 ambientes</option>
+            <option value="1">5 ambientes</option>
+          </select>
+          <select class="form-select" aria-label="Default select example">
             <option selected>USD</option>
             <option value="1">U.F.</option>
           </select>
