--- a/index.html
+++ b/index.html
@@ -125,7 +125,13 @@
           <option value="8">Providencia</option>
           <option value="9">San Miguel</option>
           <option value="10">Santiago</option>
-          <option value="11">Vitacura</option>
+          <option value="11">Vitacura</option></select
+        ><select class="form-select" aria-label="Default select example">
+          <option selected>1 ambiente</option>
+          <option value="1">2 ambientes</option>
+          <option value="1">3 ambientes</option>
+          <option value="1">4 ambientes</option>
+          <option value="1">5 ambientes</option>
         </select>
         <select
           class="form-select form-price"
@@ -134,6 +140,7 @@
           <option selected>USD</option>
           <option value="1">U.F.</option>
         </select>
+
         <div class="d-grid gap-2 col-6 mx-auto">
           <button class="btn btn-primary button-search" type="button">
             Buscar
@@ -161,7 +168,7 @@
       <h2 class="propiedades-destacadas-title">Propiedades Destacadas</h2>
       <section class="propiedades-destacadas">
         <!-- Destacada 1 -->
-        <div class="card">
+        <div class="card casa-uno">
           <div class="img-container">
             <img
               src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
@@ -179,25 +186,25 @@
           </div>
           <div class="card-icon">
             <div class="card-body card-utilities">
+              <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
                 alt="bedroom icon"
                 class="icon"
               />
-              <p>2</p>
             </div>
             <div class="card-body card-utilities">
+              <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
                 alt="bathroom icon"
                 class="icon"
               />
-              <p>2</p>
             </div>
           </div>
         </div>
         <!-- Destacada 2 -->
-        <div class="card">
+        <div class="card casa-dos">
           <div class="img-container">
             <img
               src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
@@ -215,25 +222,25 @@
           </div>
           <div class="card-icon">
             <div class="card-body card-utilities">
+              <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
                 alt="bedroom icon"
                 class="icon"
               />
-              <p>2</p>
             </div>
             <div class="card-body card-utilities">
+              <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
                 alt="bathroom icon"
                 class="icon"
               />
-              <p>2</p>
             </div>
           </div>
         </div>
         <!-- Destacada 3 -->
-        <div class="card">
+        <div class="card casa-tres">
           <div class="img-container">
             <img
               src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
@@ -251,25 +258,25 @@
           </div>
           <div class="card-icon">
             <div class="card-body card-utilities">
+              <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
                 alt="bedroom icon"
                 class="icon"
               />
-              <p>2</p>
             </div>
             <div class="card-body card-utilities">
+              <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
                 alt="bathroom icon"
                 class="icon"
               />
-              <p>2</p>
             </div>
           </div>
         </div>
         <!-- Destacada 4 -->
-        <div class="card">
+        <div class="card casa-cuatro">
           <div class="img-container">
             <img
               src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662431951/Las%20Mar%C3%ADas/Departamento_Las_Condes_-_Venta_fntgp5.png"
@@ -287,20 +294,20 @@
           </div>
           <div class="card-icon">
             <div class="card-body card-utilities">
+              <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662500723/Las%20Mar%C3%ADas/bed_txizgk.png"
                 alt="bedroom icon"
                 class="icon"
               />
-              <p>2</p>
             </div>
             <div class="card-body card-utilities">
+              <p>2</p>
               <img
                 src="https://res.cloudinary.com/maxjhernandez/image/upload/v1662506787/Las%20Mar%C3%ADas/bath_ezx5nd.png"
                 alt="bathroom icon"
                 class="icon"
               />
-              <p>2</p>
             </div>
           </div>
         </div>
