--- a/pages/venta.html
+++ b/pages/venta.html
@@ -100,10 +100,15 @@
                     dormitorios, el dormitorio principal en suite con salida a
                     su terraza. El segundo dormitorio con muy linda vista
                     también con un segundo baño. Cocina independiente con loggia
-                    y conexión a lavadora. 58 metros útiles.
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                    y conexión a lavadora. 58 metros útiles. <br />
+                    58 metros útiles. El edificio cuenta con salón de usos
+                    múltiples, gimnasio grande y muy completo, lavandería,
+                    piscina, quincho en la terraza con vistas fantásticas. Está
+                    ubicado estratégicamente con todo lo necesario a la mano, a
+                    pasos del metro, Apumanque, Intramedica, supermercados,
+                    farmacias, colegios, excelente locomoción colectiva, etc.
+                    Tiene conserjería 24/7 1 estacionamiento subterráneo y 1
+                    bodega. Estacionamientos de visita.
                   </p>
                 </div>
               </div>
