--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,6 +66,9 @@
       </nav>
     </header>
     <main class="contacto-main">
+      <div class="contacto-title">
+        <h1>Contacto</h1>
+      </div>
       <section class="envie-consulta">
         <div class="title-consulta">
           <h4>Envíenos su mensaje</h4>
@@ -86,6 +89,15 @@
                 class="form-control"
                 placeholder="Correo electrónico"
                 aria-label="Username"
+                aria-describedby="addon-wrapping"
+              />
+            </div>
+            <div class="input-group">
+              <input
+                type="number"
+                class="form-control"
+                placeholder="Número de teléfono"
+                aria-label="Phone-number"
                 aria-describedby="addon-wrapping"
               />
             </div>
